# jetson_fly

benchmarks/: cannyDetection.py  fps_test.cpp  fps_test2.cpp  gstreamer_video_capture.sh  gstreamer_view.cpp  gstreamer_view2.cpp  tx_cam.py
fictrac/: CMakeLists.txt  README.md  build_notes.txt  dump.rdb
fictrac/cmake/Modules/: FindCairomm.cmake
fictrac/config/: config_template.txt
fictrac/include/: AVWriter.h  BasicRemapper.h  CVSource.h  CameraModel.h  CameraModelPrivate.h  CameraRemap.h  CmPoint.h  ImgSource.h  NLoptFunc.h  PGRSource.h  Remapper.h  SharedPointers.h  Utils.h  VsDraw.h  readwrite.h  serial.h
fictrac/lib/: ._CameraRemap.cpp  AVWriter.cpp  CMakeLists.txt  CVSource.cpp  Remapper.cpp
fictrac/sample/: ._sample.avi  config.txt  output.csv  sample_config.txt  sample_master_config.txt
fictrac/src/: .FicTrac.cpp.swp  CMakeLists.txt  ConfigGUI.cpp  FicTrac.cpp  FicTrac.cpp.bak
fictrac_v2/: CMakeLists.txt
fictrac_v2/config/: config.txt
fictrac_v2/include/: CVSource.h  Trackball.h
fictrac_v2/sample/: config.txt
fictrac_v2/src/: CVSource.cpp  ConfigGUI.cpp  FrameGrabber.cpp  Trackball.cpp
kinefly/catkin/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
kinefly/catkin/devel/include/Kinefly/: MsgAnalogIn.h  MsgCommand.h  MsgDigitalIn.h  MsgFloat32List.h  MsgFlystate.h  MsgState.h  SrvTipdata.h  (+12 more)
kinefly/catkin/src/Kinefly/: CMakeLists.txt
phidgets/: VoltageOutput.cpp
roscam/catkin/src/jetson_csi_cam/: jetson_csi_cam.launch
video_grabber/: Jetson_Video_Grabber  Jetson_Video_Grabber.pro  mainwindow.cpp  mainwindow.h
webserver/: bootup.sh  flask.service
webserver/auto/: config.cfg  webhooks.py
(+79 files in other folders)
